feat: advantages done

--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -89,53 +89,77 @@
             </div>
         </section>
 
-        <section class="vantagens">
-            <div class="container max-w-5xl mx-auto">
-                <h2>Vantagens</h2>
-                <p>Ao ser morador do complexo residencial do Senac São Paulo, você tem acesso à:</p>
-                <h3>Centro esportivo do SENAC</h3>
-                <ul>
-                    <div class="centro-flex-left">
-                        <img src="/src/imgs/Imagem_centro2_900_600.jpg" alt="">
-                        <li>
-                            O Centro Esportivo conta com duas quadras poliesportivas cobertas para futebol de salão, basquetebol e voleibol com dimensões oficiais. Todas possuem piso emborrachado e placar eletrônico.
-                        </li>
+        <section class="bg-[#f1f1f1s] py-24">
+            <div class="container max-w-5xl mx-auto px-4 md:px-0">
+
+                <h2 class="mb-4 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
+                    Vantagens
+                </h2>
+
+                <div class="space-y-12">
+                    <!-- Centro Esportivo -->
+                    <div>
+                        <h3 class="text-2xl font-bold mb-6 text-center">Centro esportivo do SENAC</h3>
+                        <ul class="space-y-10">
+                            <li>
+                                <div class="flex flex-col md:flex-row items-center gap-6">
+                                    <img src="/src/imgs/Imagem_centro2_900_600.jpg" alt="Centro Esportivo 1" class="w-full md:w-1/2 rounded-md object-cover" />
+                                    <p>
+                                        O Centro Esportivo conta com duas quadras poliesportivas cobertas para futebol de salão, basquetebol e voleibol com dimensões oficiais. Todas possuem piso emborrachado e placar eletrônico.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex flex-col-reverse md:flex-row items-center gap-6">
+                                    <p class="md:text-end">
+                                        Além disso, possui uma quadra de squash, duas quadras de tênis também com piso emborrachado, dois campos de futebol 7 society com grama sintética aprovada pela Federação Internacional de Futebol e uma quadra poliesportiva externa sem cobertura.
+                                    </p>
+                                    <img src="/src/imgs/Imagem_centro1_900_600.jpg" alt="Centro Esportivo 2" class="w-full md:w-1/2 rounded-md object-cover" />
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex flex-col md:flex-row items-center gap-6">
+                                    <img src="/src/imgs/Imagem_centro3_900_600.jpg" alt="Centro Esportivo 3" class="w-full md:w-1/2 rounded-md object-cover" />
+                                    <p>
+                                        A infraestrutura do Centro Esportivo dispõe de vestiário feminino e masculino, todos com armários e chuveiros aquecidos. Conta ainda com aparelhos de ferro para circuito, todo material necessário para a prática de atividades esportivas, como bolas, coletes, apitos e etc.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="centro-flex-right">
-                        <img src="/src/imgs/Imagem_centro1_900_600.jpg" alt="">
-                        <li>
-                            Além disso, possui uma quadra de squash, duas quadras de tênis também com piso emborrachado, dois campos de futebol 7 society com grama sintética aprovada pela Federação Internacional de Futebol e uma quadra poliesportiva externa sem cobertura.
-                        </li>
+
+                    <!-- Academia -->
+                    <div>
+                        <h3 class="text-2xl font-bold mb-6 text-center">Academia</h3>
+                        <ul class="space-y-10">
+                            <li>
+                                <div class="flex flex-col-reverse md:flex-row items-center gap-6">
+                                    <p class="md:text-end">
+                                        Com área útil de 7.600 m² e acesso a pessoas com deficiência, a academia oferece modernidade e tecnologia de ponta em espaço arquitetonicamente planejado com ambientes amplos e integrados com conforto térmico/acústico imprescindível para a prática de atividades físicas.
+                                    </p>
+                                    <img src="/src/imgs/Imagem_academia3_900_600.jpg" alt="Academia 1" class="w-full md:w-1/2 rounded-md object-cover" />
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex flex-col md:flex-row items-center gap-6">
+                                    <img src="/src/imgs/Imagem_academia2_900_600.jpg" alt="Academia 2" class="w-full md:w-1/2 rounded-md object-cover" />
+                                    <p>
+                                        Aulas de diferentes modalidades terrestres e aquáticas, para crianças, adolescentes e adultos. Mergulho, Natação, Hidroginástica, Deep Running, Acqua Bike e In Door, Boxe, Jiu Jitsu, Judô, Ritmos, Dança do Ventre, Yoga, Musculação, Aeróbico e Pilates.
+                                    </p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="flex flex-col-reverse md:flex-row items-center gap-6">
+                                    <p class="md:text-end">
+                                        Oferece descontos especiais aos moradores do complexo residencial do Senac São Paulo.
+                                    </p>
+                                    <img src="/src/imgs/Imagem_aluno_900_600.jpg" alt="Academia 3" class="w-full md:w-1/2 rounded-md object-cover" />
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="centro-flex-left">
-                        <img src="/src/imgs/Imagem_centro3_900_600.jpg" alt="">
-                        <li>
-                            A infraestrutura do Centro Esportivo dispõe de vestiário feminino e masculino, todos com armários e chuveiros aquecidos. Conta ainda com aparelhos de ferro para circuito, todo material necessário para a prática de atividades esportivas, como bolas, coletes, apitos e etc.
-                        </li>
-                    </div>
-                </ul>
-                <h3>Academia</h3>
-                <ul>
-                    <div class="centro-flex-right">
-                        <img src="/src/imgs/Imagem_academia3_900_600.jpg" alt="">
-                        <li>
-                            Com área útil de 7.600 m² e acesso a pessoas com deficiência, a
-                            academia oferece modernidade e tecnologia de ponta em espaço arquitetonicamente planejado com ambientes amplos e integrados com conforto térmico/acústico imprescindível para a prática de atividades físicas.
-                        </li>
-                    </div>
-                    <div class="centro-flex-left">
-                        <img src="/src/imgs/Imagem_academia2_900_600.jpg" alt="">
-                        <li>
-                            Aulas de diferentes modalidades terrestres e aquáticas, para crianças, adolescentes e adultos. Mergulho, Natação, Hidroginástica, Deep Running, Acqua Bike e In Door, Boxe, Jiu Jitsu, Judô, Ritmos, Dança do Ventre, Yoga, Musculação, Aeróbico e Pilates.
-                        </li>
-                    </div>
-                    <div class="centro-flex-right">
-                        <img src="/src/imgs/Imagem_aluno_900_600.jpg" alt="">
-                        <li>
-                            Oferece descontos especiais aos moradores do complexo residencial do Senac São Paulo.
-                        </li>
-                    </div>
-                </ul>
+                </div>
+
             </div>
         </section>
     </main>
@@ -143,7 +167,7 @@
         <div class="container max-w-5xl mx-auto text-white">
             <div class="flex flex-col md:flex-row justify-center items-center">
                 <div>
-                    <h2 class="mb-4 text-2xl relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
                     <div class="flex justify-center items-center gap-4">
                         <div class="flex flex-col md:flex-row gap-3">
                             <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
