--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
         <div class="container max-w-5xl mx-auto text-white">
             <div class="flex flex-col md:flex-row justify-center items-center">
                 <div>
-                    <h2 class="mb-4 text-2xl relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
                     <div class="flex justify-center items-center gap-4">
                         <div class="flex flex-col md:flex-row gap-3">
                             <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
